--- a/src/frontend/chatAgent.html
+++ b/src/frontend/chatAgent.html
@@ -42,9 +42,6 @@
                 <div>
                     <button class="language-style-btn" lang-style = "Academic">Academic</button>
                 </div>
-                <div>
-                    <button class="language-style-btn" lang-style = "Flexible">Flexible</button>
-                </div>
              </div>
 
              <div class="language-difficulty-div">
@@ -56,7 +53,7 @@
                     <button class="language-diff-btn" lang-diff = "Intermediate">Intermediate</button> 
                 </div>
                 <div>
-                    <button class="language-diff-btn" lang-diff = "Hard">Hard</button>
+                    <button class="language-diff-btn" lang-diff = "Advanced">Advanced</button>
                 </div>
              </div>
 
